--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Journal"
+title: "Psychology Statistics Honors Project - Robin Kumaratunga"
 output:
   html_document:
     toc: true
@@ -14,115 +14,63 @@ output:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing.
-
-
-This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
-
-# My first post
-
-2018 | 7 | 23 Last compiled: `r Sys.Date()`
-
-Notice that whatever you define as a top level header, automatically gets put into the table of contents bar on the left. 
-
-## Second level header
-
-You can add more headers by adding more hashtags. These won't be put into the table of contents
-
-### third level header
-
-Here's an even lower level header
-
-# My second post (note the order)
-
-2018 | 7 | 23 Last compiled: `r Sys.Date()`
-
-I'm writing this tutorial going from the top down. And, this is how it will be printed. So, notice the second post is second in the list. If you want your most recent post to be at the top, then make a new post starting at the top. If you want the oldest first, do, then keep adding to the bottom
-
-# Adding R stuff
-
-So far this is just a blog where you can write in plain text and serve your writing to a webpage. One of the main purposes of this lab journal is to record your progress learning R. The reason I am asking you to use this process is because you can both make a website, and a lab journal, and learn R all in R-studio. This makes everything really convenient and in the sam place. 
-
-So, let's say you are learning how to make a histogram in R. For example, maybe you want to sample 100 numbers from a normal distribution with mean = 0, and standard deviation =1, and then you want to plot a histogram. You can do this right here by using an r code block, like this:
+# **FizzBuzz**
 
 ```{r}
-samples <- rnorm(100, mean=0, sd=1)
-hist(samples)
+AllNumbers <- 1:100
+for(AllNumbers in 1:100)
+ if (AllNumbers %% 3 == 0 && AllNumbers %% 5 == 0) {print('FizzBuzz')
+ } else if (AllNumbers %% 3 == 0) {print('Fizz')
+ }  else if (AllNumbers %% 5 == 0) {print('Buzz')
+ } else {print(AllNumbers)}
 ```
 
-When you knit this R Markdown document, you will see that the histogram is printed to the page, along with the R code. This document can be set up to hide the R code in the webpage, just delete the comment (hashtag), from the cold folding option in the yaml header up top. For purposes of letting yourself see the code, and me see the code, best to keep it the way that it is. You learn all of these things and more can be customized in each R code block.
+# **Snakes and Ladders**
 
-# The big idea
+Snakes and Ladders is a board game comprised of 25 spaces, numbered 1 to 25. Certain spaces contain either the bottom or top of either a snake or a ladder. The winner of the game is the individual who reaches the space 100. Players either go down a snake (from the head to the tail) or go up a ladder depending on the number of spaces the individual is made to move. For example, if an individual lands on a ladder at space 3, he or she will automatically move to position 11. There are nine ladders and ten snakes on a board. The individual is given a certain number of spaces to move by rolling a six-sided dice. 
 
-Use this lab journal to record what you do in R. This way I will be able to see what you are doing and help you along the way. You will also be creating a repository of all the things you do. You can make posts about everything. Learning specific things in R (project unrelated), and doing things for the project that we will discuss at the beginning of the Fall semester. You can get started now by fiddling around with googling things, and trying stuff out in R. I've placed some helpful starting links in the links page on this website
+First, the board must be set up properly. The movements that can occur either due to the snakes or the ladders are as follows, whereby the first number within the parenthesis is the starting tile and the second number within the parenthesis is the ending tile:
 
-# What can you do right now by yourself?
-
-It's hard to learn programming when you don't have specific problems that you are trying to solve. Everything just seems abstract.
-
-I wrote an [introductory programming book that introduces R](https://crumplab.github.io/programmingforpsych/), and gives some [concrete problems for you to solve](https://crumplab.github.io/programmingforpsych/programming-challenges-i-learning-the-fundamentals.html). 
-
-To get the hang of journaling and solving the problems to learn programming, my suggestion is that you use this .Rmd file to solve the problems. It would look like this:
-
-# Problem 1
-
-Do simple math with numbers, addition, subtraction, multiplication, division
-
+    (3, 11),
+    (10, 12),
+    (9, 18),
+    (6, 17),
+    (22, 20),
+    (24, 16),
+    (19, 8),
+    (14, 4)
+    
 ```{r}
-1+2
-2*5
-5/3
-(1+6+4)/5
+ladders.df <- data.frame(
+  x = c(3,10,9,6), 
+  y = c(11,12,18,17))
 
+snakes.df <- data.frame(
+  x = c(22,24,19,14), 
+  y = c(20,16,8,4))
+
+ndiceneededtowin <- vector("numeric", length = 1000)
+for(i in 1:1000){
+currentposition <- 0
+ndice <- 0
+nsnakes <- 0
+nladders <- 0
+ntrials = 1000
+while(currentposition < 25) {
+  dice <- sample(1:6, size = 1, replace = TRUE)
+  currentposition <- currentposition + dice
+  ndice <- ndice + 1
+if(any(ladders.df$s %in% currentposition)) {
+  currentposition <- ladders.df$e[ladders.df$s %in% currentposition]
+  ladders <- ladders + 1}
+if(any(snakes.df$s %in% currentposition)) {currentposition <- snakes.df$e[snakes.df$s %in% currentposition] 
+nsnakes<- nsnakes + 1}}
+ x<- ndice
+ ndiceneededtowin[i] <- mean(x, na.rm = TRUE)
+  }
+
+print(ndiceneededtowin)
+hist(ndiceneededtowin)
+meanndiceneededtowin <- mean(ndiceneededtowin)
+c(meanndiceneededtowin)
 ```
-
-# Problem 2
-
-Put numbers into variables, do simple math on the variables
-
-```{r}
-a<-1
-b<-2
-a+b
-
-d<-c(1,2,3)
-e<-c(5,6,7)
-d+e
-d*e
-d/e
-
-```
-
-# Problem 3
-
-Write code that will place the numbers 1 to 100 separately into a variable using for loop. Then, again using the seq function.
-
-```{r}
-# for loop solution
-# i becomes the number 1 to 100 at each step of the loop
-
-
-a <- length(100) # make empty variable, set length to 100
-for (i in 1:100){
-  a[i] <-i #assigns the number in i, to the ith index of a
-}
-
-print(a)
-
-# for loop solution #2
-
-a<-c() #create empty variable using combine command
-for (i in 1:100){
-  a<-c(a,i) # keeps combining a with itself and the new number in i
-}
-print(a)
-
-# seq solution
-a <- seq(1,100,1) # look up help for seq using ?seq() in console
-print(a)
-
-```
-
-# Replace this with problem 4
-
-And keep going. Try to solve the problems with different scripts that provide the same solution. Good luck, Happy coding.
