--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -82,7 +82,7 @@ c(meanndiceneededtowin)
 
 	The sample of these experiments involved 213 children, ranging in age from three to ten, and 301 adults. Children were further separated by age group, with three additional groups being made: 3- to 4-year-olds, 5- to 6- year-olds, and 7- to 10- year olds. It is necessary to note that children were made to complete the trials in either a laboratory or a museum, while adults were made to take the surveys online. In future studies, this discrepancy should be eliminated and both children and adults should be made to conduct trials in the same environment in order to eliminate any confounds. In order to assess whether children aged three to ten hold the same capacity as adults to correctly attribute “mean/nice” trait designations to faces that were computationally modelled as either trustworthy, dominant, or competent, participants were subjected to three blocks consisting of nine trials in the first experiment. Each trait (competent, dominant, and trustworthy) was modelled with two faces with either high or low perception of the trait. For example, of the two faces used to model trustworthiness, one is perceived as more indicative of a trustworthy face by adults than the other. 
 	
-	In each of these twenty-seven trials, faces were randomly interspersed and participants were made to choose a face after being asked a question such as “which of these faces is most nice” (Cogsdill et al., 2014). Experiment two assayed whether children could accurately attribute “mean/nice” evaluations to dominant and competent faces only. As such, participants were subject to one block of trials and were made to choose one face out of four after being asked a short question such as ““which of these faces is most nice” (Cogsdill et al., 2014). Following both experiments, the choices of all four groups (the three child groups and one adult group) were compared to the predetermined traits of the computationally modelled faces in order to operationalize whether faces low and high for a given trait were correctly attributed to the correct face. These results were operationalized from 0 to 1, with 0 indicating that no faces were correctly attributed as either high or low for certain trait (Cogsdill et al., 2014). For example, a mean score of .5 for a group would indicate the faces modelled as high in regards trustworthiness and expected to receive a “nice” response and faces modelled as low in regards to trustworthiness and expected to receive a “mean” response were correctly attributed as “mean” or “nice” 50% of the time in a given age group (Cogsdill et al., 2014).
+	In each of these twenty-seven trials, faces were randomly interspersed and participants were made to choose a face after being asked a question such as “which of these faces is most nice” (Cogsdill et al., 2014). Experiment two assayed whether children could accurately attribute “mean/nice” evaluations to dominant and competent faces only. As such, participants were subject to one block of trials and were made to choose one face out of four after being asked a short question such as ““which of these faces is most nice” (Cogsdill et al., 2014). Following both experiments, the choices of all four groups (the three child groups and one adult group) were compared to the predetermined traits of the computationally modelled faces in order to operationalize whether faces low and high for a given trait were correctly attributed to the correct face. These results were operationalized from 0 to 1, with 0 indicating that no faces were correctly attributed as either high or low for a certain trait (Cogsdill et al., 2014). For example, a mean score of .5 for a group would indicate the faces modelled as high in regards trustworthiness and expected to receive a “nice” response and faces modelled as low in regards to trustworthiness and expected to receive a “mean” response were correctly attributed as “mean” or “nice” 50% of the time in a given age group (Cogsdill et al., 2014).
 	
 	As per Experiment One, it was determined that children held the capacity to accurately make trait inferences on the basis of facial composition as young as the age group of 3- to 4- years old. In addition, children attributions of “mean/nice” better resembled adults face-to-trait attributions for faces computationally modelled as trustworthy (Cogsdill et al., 2014).
 	
